# whimsy

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
bard_cli/: bard.py  cli.py  config.py  main.py  prompt.py  utils.py
whimsy/: cli.py  config.py  exceptions.py  main.py  models.py  utils.py
whimsy/backends/: bard.py  base.py  gemini.py  openai.py
